--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+coilCompose = "2.6.0"
 credentials = "1.2.2"
 googleIdentity = "1.1.0"
 
@@ -42,6 +43,7 @@ material = "1.11.0"
 lifecycleViewModel = "2.7.0"
 
 [libraries]
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 gradle-build-tools = { module = "com.android.tools.build:gradle", version.ref = "gradle" }
 javapoet = { module = "com.squareup:javapoet", version.ref = "javapoet" }
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlinGradlePlugin" }
