--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 coilCompose = "2.6.0"
-credentials = "1.2.2"
-googleIdentity = "1.1.0"
+credentials = "1.3.0-alpha01"
+googleIdentity = "1.1.1"
 
 gradle = "8.2.2"
 hilt = "2.44"
@@ -53,6 +53,10 @@ core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx"
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycleViewModel"}
 
+androidx-credentials = { group = "androidx.credentials", name = "credentials", version.ref = "credentials" }
+androidx-credentials-playServices = { group = "androidx.credentials", name = "credentials-play-services-auth", version.ref = "credentials" }
+identity-googleId = {group = "com.google.android.libraries.identity.googleid", name = "googleid", version.ref = "googleIdentity"}
+
 supabase-postgrest = {group = "io.github.jan-tennert.supabase", name = "postgrest-kt", version.ref = "supabase_version"}
 supabase-storage = {group = "io.github.jan-tennert.supabase", name = "storage-kt", version.ref = "supabase_version"}
 supabase-gotrue = {group = "io.github.jan-tennert.supabase", name = "gotrue-kt", version.ref = "supabase_version"}
@@ -61,7 +65,6 @@ supabase-auth = {group = "io.github.jan-tennert.supabase", name = "compose-auth"
 ktor-client-android = {group = "io.ktor", name = "ktor-client-android", version.ref = "ktor_version"}
 ktor-core = {group = "io.ktor", name = "ktor-client-core", version.ref = "ktor_version"}
 ktor-utils = {group = "io.ktor", name = "ktor-utils", version.ref = "ktor_version"}
-
 
 hilt-android = {group = "com.google.dagger", name = "hilt-android", version.ref = "hilt"}
 hilt-compiler = {group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt"}
