--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 coilCompose = "2.6.0"
 credentials = "1.3.0-alpha01"
+datastorePreferences = "1.1.1"
 googleIdentity = "1.1.1"
 
 gradle = "8.2.2"
@@ -43,6 +44,8 @@ material = "1.11.0"
 lifecycleViewModel = "2.7.0"
 
 [libraries]
+androidx-datastore = { module = "androidx.datastore:datastore", version.ref = "datastorePreferences" }
+androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 gradle-build-tools = { module = "com.android.tools.build:gradle", version.ref = "gradle" }
 javapoet = { module = "com.squareup:javapoet", version.ref = "javapoet" }
