--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,25 +1,25 @@
 [versions]
 coilCompose = "2.6.0"
-credentials = "1.3.0-alpha01"
+credentials = "1.5.0-alpha05"
 datastorePreferences = "1.1.1"
 googleIdentity = "1.1.1"
 
 gradle = "8.2.2"
-hilt = "2.44"
+hilt = "2.49"
 
 kotlinxDatetimeVersion = "0.3.2"
-supabase_version="2.4.2"
-ktor_version="2.3.11"
+supabase_version="3.0.0"
+ktor_version="3.0.0-rc-1"
 
 hilt-navigation = "1.2.0"
-hiltExt = "1.1.0"
+hiltExt = "1.2.0"
 
 coreKtx = "1.12.0"
 lifecycleRuntimeKtx = "2.7.0"
 kotlin-serialization-json = "1.6.3"
 
 javapoet = "1.13.0"
-kotlinGradlePlugin = "1.8.20"
+kotlinGradlePlugin = "2.0.10"
 
 material3WindowSizeClass = "1.2.1"
 
@@ -37,7 +37,7 @@ activityCompose = "1.8.2"
 compose-nav = "2.7.7"
 
 agp = "8.2.2"
-kotlin = "1.9.22"
+kotlin = "2.0.10"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
@@ -72,7 +72,7 @@ identity-googleId = {group = "com.google.android.libraries.identity.googleid", n
 
 supabase-postgrest = {group = "io.github.jan-tennert.supabase", name = "postgrest-kt", version.ref = "supabase_version"}
 supabase-storage = {group = "io.github.jan-tennert.supabase", name = "storage-kt", version.ref = "supabase_version"}
-supabase-gotrue = {group = "io.github.jan-tennert.supabase", name = "gotrue-kt", version.ref = "supabase_version"}
+supabase-gotrue = {group = "io.github.jan-tennert.supabase", name = "auth-kt", version.ref = "supabase_version"}
 supabase-auth = {group = "io.github.jan-tennert.supabase", name = "compose-auth", version.ref = "supabase_version"}
 
 ktor-client-android = {group = "io.ktor", name = "ktor-client-android", version.ref = "ktor_version"}
@@ -122,3 +122,5 @@ kotlinSerialization = {id = "org.jetbrains.kotlin.plugin.serialization", version
 
 hiltPlugin = {id = "com.google.dagger.hilt.android", version.ref = "hilt"}
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
+
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
