--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 coilCompose = "2.6.0"
-credentials = "1.5.0-alpha05"
+credentials = "1.2.2"
 datastorePreferences = "1.1.1"
 googleIdentity = "1.1.1"
 
@@ -67,6 +67,7 @@ lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtim
 lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycleViewModel"}
 
 androidx-credentials = { group = "androidx.credentials", name = "credentials", version.ref = "credentials" }
+
 androidx-credentials-playServices = { group = "androidx.credentials", name = "credentials-play-services-auth", version.ref = "credentials" }
 identity-googleId = {group = "com.google.android.libraries.identity.googleid", name = "googleid", version.ref = "googleIdentity"}
 
