--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+            <receiver android:name=".domain.notification.ReminderReceiver" android:exported="false">
+            </receiver>
     </application>
+
     
 
 </manifest>
